# feelsketch

./: FileFormat.md  HowToBuildAuthoringTool.md  HowToBuildBrowser.md  HowToBuildLibraries.md  HowToUseAuthoringTool.md  HowToUseBrowser.md  ProjectHome.md  README.md
authoring-tool/: libPMCodeEncoderJNI.dylib
authoring-tool/doc/: index.html  overview-frame.html  overview-summary.html  serialized-form.html
authoring-tool/doc/com/nullfish/app/feel_sketch/: Launcher.html  package-summary.html  package-tree.html
authoring-tool/doc/com/nullfish/app/feel_sketch/editor/: Element.html  FSModelListener.html  ImageCache.html  Layer.html  LayerModelListener.html  NumberedColor.html  PaperSize.html  package-frame.html
authoring-tool/doc/com/nullfish/app/feel_sketch/parser/: package-frame.html  package-summary.html  package-tree.html  package-use.html
authoring-tool/doc/com/nullfish/app/feel_sketch/ui/: FSFrame.html  package-frame.html  package-tree.html
authoring-tool/doc/com/nullfish/app/feel_sketch/util/: BezierGenerator.html  ByteConverter.html  ReturnableRunnable.html  package-frame.html  package-use.html
authoring-tool/doc/com/nullfish/lib/quad_tree/: Cell.html  QuadTree.html  package-frame.html  package-summary.html  package-tree.html  package-use.html
authoring-tool/doc/com/nullfish/lib/quad_tree/class-use/: Cell.html
authoring-tool/doc/index-files/: index-17.html  index-18.html  index-19.html  index-3.html  index-4.html  index-5.html  index-7.html
authoring-tool/doc/jp/co/cia/pmcode/: PMCodeEncoderJNI.html
branches/1.0/authoring-tool/: .project  LICENSE_header.txt
branches/1.0/authoring-tool/doc/: allclasses-noframe.html  constant-values.html  deprecated-list.html  help-doc.html
branches/1.0/authoring-tool/doc/index-files/: index-12.html  index-13.html  index-14.html  index-15.html  index-2.html  index-21.html  index-23.html  index-8.html
branches/1.0/authoring-tool/lib/: installjar.bat
branches/1.0/authoring-tool/src/main/resources/: messages_ja.properties
branches/1.0/browser/android/FeelSketchBrowser/project/: .project  AndroidManifest.xml
branches/1.0/lib/cpp/: config.h.in  config.status
branches/1.0/lib/cpp/PMCodeCommon/: Makefile.in
branches/1.0/lib/cpp/PMCodeCommon/src/: Global.h  QRCodeMask.h  define.h  mathematics.h
branches/1.0/lib/cpp/PMCodeDecoder/src/: Makefile.am  PMCodeAnalysis.cpp  PMCodeAnalysis.h  PMCodeDecode.cpp  PMCodeDecode.h  PMCodeReader.h  QRCodeDecode.cpp
branches/1.0/lib/cpp/PMCodeEncoder/: Makefile.in
branches/1.0/lib/cpp/PMCodeEncoder/src/: ImageUtil.cpp  ImageUtil.h  Makefile.am  PMCodeEncode.cpp  PMCodeEncode.h  PMCodeEncoder.cpp  PMCodeMakeHeader.cpp  QRCodeToPMCode.cpp
branches/1.0/lib/jni/PMCodeEncoderJNI/: configure  configure.ac
branches/1.0/lib/jni/PMCodeEncoderJNI/src/: Makefile.am  Makefile.in  PMCodeEncoderJNI.h
branches/1.0/lib/sample/jni-sample/: run_linux.sh  run_osx.sh
browser/android/FeelSketchBrowser/project/jni/FeelSketch/: Android.mk  FeelSketchJNI.cpp  FeelSketchJNI.h
browser/android/FeelSketchBrowser/project/jni/FeelSketch/feelsketch/: Drawer.h  Parser.cpp  RectCalculator.cpp
browser/android/FeelSketchBrowser/project/jni/PMCodeDecoder/: .project  Android.mk
browser/android/FeelSketchBrowser/project/jni/zxing/: ErrorCorrectionLevel.cpp  FormatInformation.h  GrayBytesMonochromeBitmapSource.cpp  MonochromeBitmapSource.h  Version.h
browser/android/FeelSketchBrowser/project/res/layout/: main.xml
doc/: FileFormat.md  HowToBuildAuthoringTool.md  HowToBuildBrowser.md  HowToBuildLibraries.md  HowToUseAuthoringTool.md  HowToUseBrowser.md
lib/cpp/: Makefile.am  Makefile.in  config.h  configure  configure.ac  libtool
lib/cpp/PMCodeCommon/: Makefile.in
lib/cpp/PMCodeCommon/src/: Global.cpp  Makefile.am  Makefile.in  QRCodeDisposition.cpp  QRCodeDisposition.h  QRCodeMask.cpp  QRCodeMask.h  QRCodeSymbol.h  ReedSolomon.h  mathematics.h
lib/cpp/PMCodeDecoder/src/: Makefile.am  Makefile.in  PMCodeAnalysis.cpp  PMCodeToQRCodes.h  QRCodeDecode.cpp  QRCodeDecode.h  QRCodeToPMCode.cpp  QRCodeUnMask.cpp
lib/cpp/PMCodeEncoder/src/: ImageUtil.cpp  Makefile.am  Makefile.in  PMCodeColorCodeSetting.h  PMCodeEncodeParameter.h  PMCodeEncoder.cpp  PMCodeImageData.cpp  QRCodeEncode.cpp  QRCodeToPMCode.cpp  QRCodeToPMCode.h
lib/jni/PMCodeEncoderJNI/: Makefile.in  config.h  config.h.in
lib/jni/PMCodeEncoderJNI/src/: PMCodeEncoderJNI.cpp  PMCodeEncoderJNI.h
lib/sample/jni-sample/: run_linux.sh  run_osx.sh
trunk/authoring-tool/: .classpath  libPMCodeEncoderJNI.dylib_32  pom.xml
trunk/authoring-tool/doc/: allclasses-frame.html  overview-tree.html  package-list
trunk/authoring-tool/doc/index-files/: index-1.html  index-10.html  index-11.html  index-16.html  index-20.html  index-22.html  index-6.html  index-9.html
trunk/authoring-tool/lib/: installjar.sh
trunk/browser/android/FeelSketchBrowser/: Application.mk
trunk/browser/android/FeelSketchBrowser/project/: AndroidManifest.xml
trunk/lib/cpp/: Makefile.in  config.h.in  configure
trunk/lib/cpp/PMCodeCommon/src/: Global.cpp  Global.h  Makefile.in  QRCodeSymbol.cpp  QRCodeSymbol.h  ReedSolomon.cpp  ReedSolomon.h  define.h  mathematics.cpp
trunk/lib/cpp/PMCodeDecoder/: Makefile.in
trunk/lib/cpp/PMCodeDecoder/src/: PMCodeDecode.h  PMCodeReader.cpp  PMCodeToQRCodes.cpp  PMCodeToQRCodes.h  QRCodeToPMCode.cpp
trunk/lib/cpp/PMCodeEncoder/: Makefile.in
trunk/lib/cpp/PMCodeEncoder/src/: ImageUtil.h  PMCodeColorCodeSetting.cpp  PMCodeColorCodeSetting.h  PMCodeEncode.cpp  PMCodeEncode.h  PMCodeEncodeParameter.cpp  PMCodeEncodeParameter.h  PMCodeEncoder.h  PMCodeImageData.h  PMCodeMakeHeader.cpp  PMCodeMakeHeader.h  QRCodeEncode.cpp  QRCodeEncode.h  QRCodeToPMCode.h
trunk/lib/jni/PMCodeEncoderJNI/src/: PMCodeEncoderJNI.cpp
wiki/: Featured.wiki  FileFormat.wiki  HowToBuildAuthoringTool.wiki  HowToBuildBrowser.wiki  HowToBuildLibraries.wiki  HowToUseAuthoringTool.wiki  HowToUseBrowser.wiki  SideTest.wiki
wiki/ja/: FileFormat.wiki  HowToBuildLibraries.wiki  HowToUseAuthoringTool.wiki  HowToUseBrowser.wiki
(+326 files in other folders)
