noinst_LIBRARIES = libPMCodeCommon.a
libPMCodeCommon_a_SOURCES = \
														Global.cpp \
														Global.h \
														QRCodeDisposition.cpp \
														QRCodeDisposition.h \
														QRCodeMask.cpp \
														QRCodeMask.h \
														QRCodeSymbol.cpp \
														QRCodeSymbol.h \
														ReedSolomon.cpp \
														ReedSolomon.h \
														define.h \
														mathematics.cpp \
														mathematics.h
libPMCodeCommon_a_LIBADD = \
														Global.o \
														QRCodeDisposition.o \
														QRCodeMask.o \
														QRCodeSymbol.o \
														ReedSolomon.o \
														mathematics.o
