lib_LTLIBRARIES = libPMCodeCommon.la
libPMCodeCommon_la_SOURCES = \
														Global.cpp \
														Global.h \
														QRCodeDisposition.cpp \
														QRCodeDisposition.h \
														QRCodeMask.cpp \
														QRCodeMask.h \
														QRCodeSymbol.cpp \
														QRCodeSymbol.h \
														ReedSolomon.cpp \
														ReedSolomon.h \
														define.h \
														mathematics.cpp \
														mathematics.h

