noinst_LIBRARIES = libPMCodeDecoder.a
INCLUDES = -I../../PMCodeCommon/src/
libPMCodeDecoder_a_SOURCES = \
														PMCodeAnalysis.cpp \
														PMCodeAnalysis.h \
														PMCodeDecode.cpp \
														PMCodeDecode.h \
														PMCodeReader.cpp \
														PMCodeReader.h \
														PMCodeToQRCodes.cpp \
														PMCodeToQRCodes.h \
														QRCodeDecode.cpp \
														QRCodeDecode.h \
														QRCodeRestoration.cpp \
														QRCodeRestoration.h \
														QRCodeUnMask.cpp \
														QRCodeUnMask.h
libPMCodeDecoder_a_LIBADD = \
														PMCodeAnalysis.o \
														PMCodeDecode.o \
														PMCodeReader.o \
														PMCodeToQRCodes.o \
														QRCodeDecode.o \
														QRCodeRestoration.o \
														QRCodeUnMask.o

