noinst_LIBRARIES = libPMCodeEncoder.a
#libPMCodeEncoder_a_CPPFLAGS = -I../../PMCodeCommon/src/
INCLUDES = -I../../PMCodeCommon/src/
libPMCodeEncoder_a_SOURCES = \
														ImageUtil.cpp \
														ImageUtil.h \
														PMCodeColorCodeSetting.cpp \
														PMCodeColorCodeSetting.h \
														PMCodeEncode.cpp \
														PMCodeEncode.h \
														PMCodeEncodeParameter.cpp \
														PMCodeEncodeParameter.h \
														PMCodeEncoder.cpp \
														PMCodeEncoder.h \
														PMCodeImageData.cpp \
														PMCodeImageData.h \
														PMCodeMakeHeader.cpp \
														PMCodeMakeHeader.h \
														QRCodeEncode.cpp \
														QRCodeEncode.h \
														QRCodeToPMCode.cpp \
														QRCodeToPMCode.h
libPMCodeEncoder_a_LIBADD = \
														ImageUtil.o \
														PMCodeColorCodeSetting.o \
														PMCodeEncode.o \
														PMCodeEncodeParameter.o \
														PMCodeEncoder.o \
														PMCodeImageData.o \
														PMCodeMakeHeader.o \
														QRCodeEncode.o \
														QRCodeToPMCode.o
