lib_LTLIBRARIES = libPMCodeDecoder.la
INCLUDES = -I../../PMCodeCommon/src/
libPMCodeDecoder_la_SOURCES = \
														PMCodeAnalysis.cpp \
														PMCodeAnalysis.h \
														PMCodeDecode.cpp \
														PMCodeDecode.h \
														PMCodeReader.cpp \
														PMCodeReader.h \
														PMCodeToQRCodes.cpp \
														PMCodeToQRCodes.h \
														QRCodeDecode.cpp \
														QRCodeDecode.h \
														QRCodeRestoration.cpp \
														QRCodeRestoration.h \
														QRCodeUnMask.cpp \
														QRCodeUnMask.h

