lib_LTLIBRARIES = libPMCodeEncoder.la
#libPMCodeEncoder_a_CPPFLAGS = -I../../PMCodeCommon/src/
INCLUDES = -I../../PMCodeCommon/src/
libPMCodeEncoder_la_SOURCES = \
														ImageUtil.cpp \
														ImageUtil.h \
														PMCodeColorCodeSetting.cpp \
														PMCodeColorCodeSetting.h \
														PMCodeEncode.cpp \
														PMCodeEncode.h \
														PMCodeEncodeParameter.cpp \
														PMCodeEncodeParameter.h \
														PMCodeEncoder.cpp \
														PMCodeEncoder.h \
														PMCodeImageData.cpp \
														PMCodeImageData.h \
														PMCodeMakeHeader.cpp \
														PMCodeMakeHeader.h \
														QRCodeEncode.cpp \
														QRCodeEncode.h \
														QRCodeToPMCode.cpp \
														QRCodeToPMCode.h

