lib_LTLIBRARIES = libPMCodeEncoderJNI.la
INCLUDES = -I../../../cpp/PMCodeCommon/src/ -I../../../cpp/PMCodeEncoder/src/ -I$${JAVA_HOME}/include/
#libPMCodeEncoderJNI_la_CPPFLAGS = \
														-lPMCodeCommon \
														-lPMCodeEncoder
libPMCodeEncoderJNI_la_SOURCES = \
														PMCodeEncoderJNI.cpp \
														PMCodeEncoderJNI.h
#libPMCodeEncoderJNI_la_LIBADD = \
#														PMCodeEncoderJNI.lo

